2003-07-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/syscalls.list: umask syscall never fails.

2003-07-27  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/init-first.c: Mark init as used.

2003-07-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/a.out.h: Replace with i386 version.
	Include bits/a.out.h.
	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
	bits/a.out.h.
	* sysdeps/unix/sysv/linux/bits/a.out.h: New file.
	* sysdeps/unix/sysv/linux/i386/bits/a.out.h: New file.
	* sysdeps/unix/sysv/linux/m68k/bits/a.out.h: New file.
	* sysdeps/unix/sysv/linux/x86_64/bits/a.out.h: New file.
	* sysdeps/unix/sysv/linux/alpha/a.out.h: New file.
	* sysdeps/unix/sysv/linux/alpha/bits/a.out.h: New file.
	* sysdeps/unix/sysv/linux/sparc/a.out.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/a.out.h: New file.

2003-07-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/aio_cancel.c (aio_cancel): Return AIO_ALLDONE
	if aiocbp != NULL and has already completed.  Return -1/EINVAL if
	aiocbp->aio_fildes does not match fildes.

2003-07-24  Ulrich Drepper  <drepper@redhat.com>

	* timezone/zic.c (rpytime): Replace cheap overflow check with a
	functioning one.

	* include/link.h (struct link_map): Add l_tls_firstbyte_offset field.
	* sysdeps/generic/dl-tls.c [TLS_TCB_AT_TP] (_dl_determine_tlsoffset):
	Fix calculation of offsets to take misalignment of first byte in
	file into account.
	* elf/dl-load.c (_dl_map_object_from_fd): Initialize
	l_tls_firstbyte_offset field.
	* elf/rtld.c (_dl_start_final, _dl_start, dl_main): Likewise.
	* elf/dl-reloc.c (_dl_allocate_static_tls): Change return type to int.
	Take l_tls_firstbyte_offset information into account.
	(CHECK_STATIS_TLS): _dl_allocate_static_tls can fail now.
	* sysdeps/generic/ldsodefs.h: Adjust _dl_allocate_static_tls prototype.
	* elf/Makefile: Add rules to build and run tst-tls14.
	* elf/tst-tls14.c: New file.
	* elf/tst-tlsmod14a.c: New file.