@@ -1,5 +1,8 @@
 2003-07-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/syscalls.list: time syscall never fails.
+	* sysdeps/unix/sysv/linux/x86_64/time.S: time syscall never fails.
+	* sysdeps/unix/sysv/i386/time.S: time syscall never fails.
 	* sysdeps/unix/syscalls.list: umask syscall never fails.
 
 2003-07-27  Andreas Jaeger  <aj@suse.de>
